# life-decisions

./: .gitignore  README.md  orchestrator.py  pyproject.toml  setup_and_run.bat  setup_and_run_orchestration.bat  what-jacket-to-wear.md
common/: utils.py  weather_utils.py
devops/: activate_env.ps1  setup_and_run_orchestration.ps1
integrations/: openweathermap.py
jacket/: common.py  exec_jacket_decision.py  gloves.py  jacket.py  jacket_decision.py  rain_jacket.py
tests/unit/integrations/: test_openweathermap.py
tests/unit/jacket/: test_common.py  test_gloves.py  test_jacket.py  test_jacket_decision.py  test_rain_jacket.py
